[tool.poetry]
name = "tclab_jupyter"
version = "0.1.0"
description = "A jupyter based application to explore different control techniques of a simple temperature plant"
authors = ["Everton Colling <evertoncolling@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bqplot = "0.11.9"
numpy = "1.22.0"
gekko = "1.0.4"
scipy = "1.8.1"
ipywidgets = "7.5.1"
jupyter = "1.0.0"
tclab = "0.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
